0.10.1/_sources/gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_d_slicing.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_d_slicing.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_d_slicing.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_d_slicing.py:


Slice an NDDataset with indices and coordinates
===============================================

This example shows how to combine standard Python slicing with
coordinate-aware slicing on an infrared time series.

.. GENERATED FROM PYTHON SOURCE LINES 14-17

.. code-block:: default


    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 18-19

Load an IR dataset and express the acquisition axis in minutes.

.. GENERATED FROM PYTHON SOURCE LINES 19-27

.. code-block:: default


    dataset = scp.read_omnic(
        "irdata/CO@Mo_Al2O3.SPG",
        description="CO adsorption, difference spectra",
    )
    dataset.y = (dataset.y - dataset[0].y).to("minute")
    print(dataset)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    NDDataset: [float64] a.u. (shape: (y:19, x:3112))




.. GENERATED FROM PYTHON SOURCE LINES 28-29

Plot the full dataset once for context.

.. GENERATED FROM PYTHON SOURCE LINES 29-34

.. code-block:: default


    prefs = scp.preferences
    prefs.figure.figsize = (7, 4)
    _ = dataset.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_d_slicing_001.png
   :alt: plot d slicing
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_d_slicing_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 35-36

Standard integer slices work as expected on both dimensions.

.. GENERATED FROM PYTHON SOURCE LINES 36-43

.. code-block:: default


    first_four = dataset[:4]
    every_other_point = dataset[:, ::2]

    print(first_four.shape)
    print(every_other_point.shape)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    (4, 3112)
    (19, 1556)




.. GENERATED FROM PYTHON SOURCE LINES 44-46

Coordinate-aware slicing is often more convenient for spectroscopy work.
Using floats slices directly on axis coordinates instead of integer indices.

.. GENERATED FROM PYTHON SOURCE LINES 46-50

.. code-block:: default


    carbonyl_region = dataset[:, 2300.0:1900.0]
    _ = carbonyl_region.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_d_slicing_002.png
   :alt: plot d slicing
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_d_slicing_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 51-52

The same applies to the time axis.

.. GENERATED FROM PYTHON SOURCE LINES 52-56

.. code-block:: default


    window = dataset[80.0:180.0, 2300.0:1900.0]
    _ = window.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_d_slicing_003.png
   :alt: plot d slicing
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_d_slicing_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 57-58

A single float selects the closest spectrum on that axis.

.. GENERATED FROM PYTHON SOURCE LINES 58-62

.. code-block:: default


    selected = dataset[60.0]
    selected.y






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>Coord [y:acquisition timestamp (GMT)] — float64, size: 1, min</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">1</div></div>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">acquisition timestamp (GMT)</div></div>
    <div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[   58.32] min</div></div></div>
    <div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[[  2016-10-18 14:47:54+00:00]<br/> [  *Résultat de Soustraction:04_Mo_Al2O3_calc_0.021torr_LT_after sulf_Oct 18 16:45:00 2016 (GMT+02:00)]]</div></div></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 63-65

This ends the example. Uncomment the next line to display the figures when
running the script directly with Python.

.. GENERATED FROM PYTHON SOURCE LINES 65-67

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.626 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_d_slicing.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_d_slicing.py <plot_d_slicing.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_d_slicing.ipynb <plot_d_slicing.ipynb>`
