0.12.4/_sources/gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_d_slicing.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/a_nddataset/plot_d_slicing.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_d_slicing.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_d_slicing.py:


Slice an NDDataset with indices and coordinates
===============================================

This example shows how to combine standard Python slicing with
coordinate-aware slicing on an infrared time series.

.. GENERATED FROM PYTHON SOURCE LINES 15-18

.. code-block:: Python


    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 19-21

Load and inspect the dataset
-----------------------------

.. GENERATED FROM PYTHON SOURCE LINES 21-28

.. code-block:: Python

    dataset = scp.read_omnic(
        "irdata/CO@Mo_Al2O3.SPG",
        description="CO adsorption, difference spectra",
    )
    dataset.y = (dataset.y - dataset[0].y).to("minute")
    dataset






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>NDDataset [CO@Mo_Al2O3] — float64, shape: (y:19, x:3112), a.u.</summary>
    <div class="scp-output section"><div class="attr-name">name</div><div>:</div><div class="attr-value">CO@Mo_Al2O3</div></div><div class="scp-output section"><div class="attr-name">author</div><div>:</div><div class="attr-value">runner@runnervmzvulz</div></div><div class="scp-output section"><div class="attr-name">created</div><div>:</div><div class="attr-value">2026-08-18 17:34:57+00:00</div></div><div class="scp-output section"><div class="attr-name">description</div><div>:</div><div class="attr-value">CO adsorption, difference spectra</div></div><div class="scp-output section"><div class="attr-name">history</div><div>:</div><div class="attr-value">2026-08-18 17:34:57+00:00> Imported from spg file /home/runner/.spectrochempy/testdata/irdata/CO@Mo_Al2O3.SPG.<br/>2026-08-18 17:34:57+00:00> Sorted by date</div></div><div class="scp-output section"><details><summary>Data</summary>
    <div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">absorbance</div></div><div class="scp-output section"><div class="attr-name">values</div><div>:</div><div class="attr-value"> <div class="numeric">[[0.0008032 3.788e-05 ... 0.0003027 0.0003745]<br/> [-3.608e-05 -0.0001981 ... 0.0003089  0.00117]<br/> ...<br/> [0.0008357 -0.0001387 ... -0.0005221 -0.001121]<br/> [0.0005655 -0.000116 ... -0.00057 -0.0006307]] a.u.</div></div></div><div class="scp-output section"><div class="attr-name">shape</div><div>:</div><div class="attr-value">(y:19, x:3112)</div></div>
    </details></div><div class="scp-output section"><details><summary>Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">3112</div></div><div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">wavenumbers</div></div><div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[    4000     3999 ...     1001    999.9] cm⁻¹</div></div></div>
    </details></div><div class="scp-output section"><details><summary>Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">19</div></div><div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">acquisition timestamp (GMT)</div></div><div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[       0    4.517 ...      132      137] min</div></div></div><div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[[  2016-10-18 13:49:35+00:00   2016-10-18 13:54:06+00:00 ...   2016-10-18 16:01:33+00:00   2016-10-18 16:06:37+00:00]<br/> [  *Résultat de Soustraction:04_Mo_Al2O3_calc_0.003torr_LT_after sulf_Oct 18 15:46:42 2016 (GMT+02:00)<br/>    *Résultat de Soustraction:04_Mo_Al2O3_calc_0.004torr_LT_after sulf_Oct 18 15:51:12 2016 (GMT+02:00) ...<br/>    *Résultat de Soustraction:04_Mo_Al2O3_calc_0.905torr_LT_after sulf_Oct 18 17:58:42 2016 (GMT+02:00)<br/>    *Résultat de Soustraction:04_Mo_Al2O3_calc_1.004torr_LT_after sulf_Oct 18 18:03:41 2016 (GMT+02:00)]]</div></div></div>
    </details></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 29-33

.. code-block:: Python

    prefs = scp.preferences
    prefs.figure.figsize = (7, 4)
    _ = dataset.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_d_slicing_001.png
   :alt: plot d slicing
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_d_slicing_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 34-37

Integer-based slicing
----------------------
Standard integer slices work as expected on both dimensions:

.. GENERATED FROM PYTHON SOURCE LINES 37-43

.. code-block:: Python

    first_four = dataset[:4]
    every_other_point = dataset[:, ::2]

    print(first_four.shape)
    print(every_other_point.shape)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    (4, 3112)
    (19, 1556)




.. GENERATED FROM PYTHON SOURCE LINES 44-47

Coordinate-aware slicing
-------------------------
Using floats slices directly on axis coordinates instead of integer indices:

.. GENERATED FROM PYTHON SOURCE LINES 47-50

.. code-block:: Python

    carbonyl_region = dataset[:, 2300.0:1900.0]
    _ = carbonyl_region.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_d_slicing_002.png
   :alt: plot d slicing
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_d_slicing_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 51-52

The same applies to the time axis:

.. GENERATED FROM PYTHON SOURCE LINES 52-55

.. code-block:: Python

    window = dataset[80.0:137.0, 2300.0:1900.0]
    _ = window.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_d_slicing_003.png
   :alt: plot d slicing
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/sphx_glr_plot_d_slicing_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 56-59

Selecting the closest spectrum
-------------------------------
A single float selects the nearest spectrum on that axis:

.. GENERATED FROM PYTHON SOURCE LINES 59-62

.. code-block:: Python

    selected = dataset[60.0]
    selected.y






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class="scp-output"><details><summary>Coord [y:acquisition timestamp (GMT)] — float64, size: 1, min</summary>
    <div class="scp-output section"><div class="attr-name">size</div><div>:</div><div class="attr-value">1</div></div><div class="scp-output section"><div class="attr-name">title</div><div>:</div><div class="attr-value">acquisition timestamp (GMT)</div></div><div class="scp-output section"><div class="attr-name">coordinates</div><div>:</div><div class="attr-value"> <div class="numeric">[   58.32] min</div></div></div><div class="scp-output section"><div class="attr-name">labels</div><div>:</div><div class="attr-value"> <div class="label">[[  2016-10-18 14:47:54+00:00]<br/> [  *Résultat de Soustraction:04_Mo_Al2O3_calc_0.021torr_LT_after sulf_Oct 18 16:45:00 2016 (GMT+02:00)]]</div></div></div>
    </details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 63-65

This ends the example. Uncomment the next line to display the figures when
running the script directly with Python.

.. GENERATED FROM PYTHON SOURCE LINES 65-67

.. code-block:: Python


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.518 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_d_slicing.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_d_slicing.ipynb <plot_d_slicing.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_d_slicing.py <plot_d_slicing.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_d_slicing.zip <plot_d_slicing.zip>`
